--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,14 +1,11 @@
 pipeline {
-
   environment {
-    dockerimagename = "santoshahirwar/reactstatic_test"
-    dockerImage = ""
+    dockerImageName = "santoshahirwar/reactstatic_test"
   }
 
   agent any
 
   stages {
-
     stage('Checkout Source') {
       steps {
         git 'https://github.com/aayanshahirwar/my-react-frontend.git'
@@ -16,20 +13,20 @@ pipeline {
     }
 
     stage('Build image') {
-      steps{
+      steps {
         script {
-          dockerImage = docker.build dockerimagename
+          dockerImage = docker.build dockerImageName
         }
       }
     }
 
     stage('Pushing Image') {
       environment {
-               registryCredential = 'santosh-dockerhub'
-           }
-      steps{
+        registryCredential = 'santosh-dockerhub'
+      }
+      steps {
         script {
-          docker.withRegistry( 'https://registry.hub.docker.com', registryCredential ) {
+          docker.withRegistry('https://index.docker.io/v1/', registryCredential) {
             dockerImage.push("latest")
           }
         }
@@ -38,12 +35,37 @@ pipeline {
 
     stage('Deploying App to Kubernetes') {
       steps {
-        script {
-          kubernetesDeploy(configs: "deploymentservice.yml", kubeconfigId: "kubernetes")
+        withKubeConfig(
+          caCertificate: '', 
+          clusterName: 'kubernetes', 
+          contextName: '', 
+          credentialsId: 'k8-cred', 
+          namespace: 'webapps', 
+          restrictKubeConfigAccess: false, 
+          serverUrl: 'https://172.20.1.43:6443'
+        ) {
+          sh 'kubectl apply -f deploymentservice.yaml'
+          sh 'kubectl rollout status deployment/reactapp-deployment -n webapps --timeout=300s'
         }
       }
     }
 
+    stage('Verify Deployment') {
+      steps {
+        withKubeConfig(
+          caCertificate: '', 
+          clusterName: 'kubernetes', 
+          contextName: '', 
+          credentialsId: 'k8-cred', 
+          namespace: 'webapps', 
+          restrictKubeConfigAccess: false, 
+          serverUrl: 'https://172.20.1.43:6443'
+        ) {
+          sh 'kubectl get pods -n webapps'
+          sh 'kubectl get svc -n webapps'
+          sh 'kubectl get deployment -n webapps'
+        }
+      }
+    }
   }
-
 }
