--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: reactapp
 spec:
-  replicas: : : 3 
+  replicas: 3
   selector:
     matchLabels:
       app: reactapp
