--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,29 +12,11 @@ pipeline {
       }
     }
 
-    // ✅ SONARQUBE ANALYSIS STAGE - Using your configured server
+    // ✅ SIMPLIFIED SONARQUBE STAGE
     stage('SonarQube Analysis') {
-      environment {
-        scannerHome = tool 'SonarQubeScanner'  // Jenkins tool name for SonarQube scanner
-      }
       steps {
-        withSonarQubeEnv('sonar') {  // ← USE YOUR SERVER NAME 'sonar' here
-          script {
-            sh """
-              ${scannerHome}/bin/sonar-scanner \
-              -Dsonar.projectKey=my-react-frontend \
-              -Dsonar.projectName='My React Frontend' \
-              -Dsonar.projectVersion=1.0 \
-              -Dsonar.sources=src \
-              -Dsonar.exclusions=**/node_modules/**,**/coverage/**,**/build/**,**/public/** \
-              -Dsonar.tests=src \
-              -Dsonar.test.inclusions=**/*.test.js,**/*.spec.js,**/*.test.jsx,**/*.spec.jsx \
-              -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
-              -Dsonar.sourceEncoding=UTF-8 \
-              -Dsonar.language=js \
-              -Dsonar.qualitygate.timeout=300
-            """
-          }
+        withSonarQubeEnv('sonar') {
+          sh 'npx sonar-scanner -Dsonar.projectKey=my-react-frontend -Dsonar.sources=src'
         }
       }
     }
@@ -45,8 +27,6 @@ pipeline {
           sh '''
             echo "Installing npm dependencies..."
             npm install
-            echo "Generating test coverage..."
-            npm test -- --coverage --watchAll=false || true
             echo "Building React app..."
             npm run build
             echo "React build completed!"
@@ -55,15 +35,7 @@ pipeline {
       }
     }
 
-    // ✅ QUALITY GATE CHECK
-    stage("Quality Gate") {
-      steps {
-        timeout(time: 5, unit: 'MINUTES') {
-          waitForQualityGate abortPipeline: true
-        }
-      }
-    }
-
+    // ... rest of your stages remain the same
     stage('Build Docker Image') {
       steps {
         script {
@@ -119,15 +91,6 @@ pipeline {
           sh 'kubectl get deployment -n webapps'
         }
       }
-    }
-  }
-
-  post {
-    failure {
-      echo 'Pipeline failed! Check the logs.'
-    }
-    success {
-      echo 'Pipeline completed successfully with SonarQube analysis!'
     }
   }
 }
